# data-comparison

./: .env.example  .gitignore  README.md  llms.txt  pyproject.toml  q-dev-chat-2025-08-06.md  requirements.txt
config/: database.yaml  settings.yaml
reports/: comprehensive_analysis.html  comprehensive_analysis.md  detailed_match_analysis_report.md  interactive_match_analysis.html  vss_comprehensive_fault_analysis.md  vss_name_similarity_report.md
scripts/: check_actual_columns.py  check_columns_v1.py  column_mapping_analyzer.py  common_columns_only.py  compare_specific_files.py  compound_match_analysis.py  comprehensive_match_analysis.py  comprehensive_match_analysis_v1.py  comprehensive_match_analysis_v10.py  comprehensive_match_analysis_v10_clean.py  comprehensive_match_analysis_v11.py  comprehensive_match_analysis_v2.py  comprehensive_match_analysis_v4.py  comprehensive_match_analysis_v5.py  comprehensive_match_analysis_v6.py  comprehensive_match_analysis_v7.py  comprehensive_match_analysis_v8.py  comprehensive_match_analysis_v9.py  comprehensive_report_generator.py  comprehensive_report_generator_v1_1.py  corrected_full_comparison.py  data_profiler.py  dataset_comparison_v1.py  dataset_similarity_analyzer.py  detailed_match_report.py  duckdb_analysis_v1.py  duckdb_analysis_v2.py  duckdb_analysis_v3.py  duckdb_analysis_v4.py  duckdb_report_v1.py  duckdb_report_v2.py  duckdb_report_v3.py  duckdb_report_v4.py  duplicate_investigation_v1.py  enhanced_profiler.py  final_correct_comparison.py  final_working_comparison.py  full_dataset_profiler.py  full_mapped_comparison.py  hash_validation_analysis.py  (+16 more)
(+14 files in other folders)
