[project]
name = "data-comparison"
version = "0.1.0"
description = "Data Comparison Project Primarily to comare Alivedata Core with other data"
authors = [
    {name = "Tim Loane"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dabbler (>=0.8.1.2,<0.9.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "dataprofiler (>=0.13.4,<0.14.0)",
    "datashader (>=0.18.1,<0.19.0)",
    "ruff (>=0.12.7,<0.13.0)",
    "duckdb (>=1.3.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fireducks (>=1.3.3,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "bokeh (>=3.7.3,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "polars (>=1.32.0,<2.0.0)",
    "weasyprint (>=66.0,<67.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
