[tool.poetry]
name = "data-comparison"
version = "0.1.0"
description = "Data Comparison Project"
authors = ["Tim Loane"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "^1.3.2"
loguru = "^0.7.3"
pandas = "^2.3.1"
polars = "^1.32.0"
pydantic = "^2.11.7"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
plotly = "^6.2.0"
sentence-transformers = "^5.1.0"
pyarrow = "^21.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^25.1.0"
ruff = "^0.12.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"